:boom: fix: invisible focused workspace's id
messed up here, i should probably use common class rules instead of adding a style to every single widget

--- a/data/css/bar.css
+++ b/data/css/bar.css
@@ -62,7 +62,7 @@
 }
 .bar-container .workspaces-row .workspace.focus label.id {
   opacity: 0;
-  color: var(--fg-light);
+  color: var(--bg-primary);
   margin-right: 0;
 }
 .bar-container .workspaces-row .workspace icon {
